# hsu-core

./: README.md  architecture.md  go.mod  go.sum  implementation.md  pyproject.toml
api/proto/: coreservice.proto  generate-go.bat  generate-go.sh  generate-py.bat  generate-py.sh
cmd/srv/procman/: config-echotest-unix.yaml  config-echotest-windows.yaml  config-integrated.yaml  config-managed-logging-default.yaml  config-managed-logging-none.yaml  config-qdrant.yaml  main.go
cmd/srv/svcreg/: main.go
cmd/test/echotest/: main.go
docs/: UNIFIED_COMMUNICATION_IMPLEMENTATION_ASSESSMENT.md
go/: README.md  go.mod  go.sum
go/api/proto/: coreservice.pb.go  coreservice_grpc.pb.go
go/control/: api_type.go  client_conn.go  gateway.go  handler.go  server.go
go/domain/: def_handler.go  retry_ping.go
go/pkg/: TODOs.txt
go/pkg/control/: client_conn.go  gateway.go  handler.go  server.go
go/pkg/domain/: contract.go  def_handler.go  retry_ping.go
go/pkg/errors/: errors_test.go
go/pkg/logcollection/: cross_platform_test.go  example_test.go  factory.go  field.go  integration_test.go  interface.go  service.go  zap_adapter.go
go/pkg/logging/: logging.go
go/pkg/managedprocess/: integrated_managed_process.go  integrated_managed_process_test.go  integrated_unit.go  integrated_worker.go  integrated_worker_test.go  managed_unit.go  managed_worker.go  managed_worker_test.go  process_desc.go  standard_managed_process.go  standard_managed_process_test.go  std_managed_process.go  std_managed_process_test.go  unit_metadata.go  unmanaged_process.go  unmanaged_process_test.go  unmanaged_unit.go  unmanaged_worker.go  unmanaged_worker_test.go  validation.go  worker.go
go/pkg/master/: config.go  config_test.go  logcollection_integration.go  master.go  master_runner.go  master_test.go  validation.go  validation_test.go
go/pkg/modulemanagement/: runtime.go  wait_signals.go
go/pkg/modules/: direct_closure.go  gateway_factory.go  lifecycle.go  manager.go  module.go  remote_gateways.go  remote_handlers.go
go/pkg/monitoring/: health_check.go  validation.go
go/pkg/process/: attach.go  execute.go  execute_windows.go  process.go  process_test.go  process_windows.go  terminate_windows.go
go/pkg/processfile/: OS_DIRECTORY_CONVENTIONS.md  process_file.go  process_file_test.go
go/pkg/processmanagement/: manager.go  manager_test.go  validation.go
go/pkg/processmanager/: config.go  config_test.go  logcollection_integration.go  manager.go  manager_test.go  runner.go  validation.go  validation_test.go
go/pkg/resourcelimits/: manager.go  platform_monitor.go  platform_monitor_darwin.go  (+2 more)
go/process/: process.go  process_test.go  process_unix.go
pkg/errors/: errors.go  errors_test.go
pkg/logcollection/: cross_platform_test.go  example_test.go  field.go  integration_test.go  interface.go  service.go  zap_adapter.go
pkg/managedprocess/: integrated_managed_process.go  integrated_managed_process_test.go  process_desc.go  standard_managed_process.go  standard_managed_process_test.go  unmanaged_process.go  unmanaged_process_test.go  validation.go
pkg/monitoring/: health_check.go  validation.go
pkg/process/: attach.go  execute.go  terminate_windows.go  validation.go  validation_test.go
pkg/processfile/: process_file.go
pkg/processmanagement/: config.go  config_test.go  logcollection_integration.go  manager.go  manager_test.go  runner.go  validation.go  validation_test.go
pkg/resourcelimits/: enforcer.go  enforcer_darwin.go  enforcer_linux.go  enforcer_windows.go  manager.go  monitor.go  platform_monitor.go  platform_monitor_darwin.go  platform_monitor_linux.go  platform_monitor_windows.go  violation_checker.go
pkg/serviceregistry/: registry.go
py/control/: handler.py
python/: __init__.py  pyproject.toml
python/lib/control/: client_conn.py  def_handler.py  gateway.py  handler.py  server.py
python/lib/domain/: contract.py  def_handler.py
rust/: Cargo.toml  README.md  SETUP_COMPLETE.md  config-example.yaml
rust/crates/hsu-common/src/: errors.rs  lib.rs
rust/crates/hsu-log-collection/: Cargo.toml
rust/crates/hsu-log-collection/src/: capture.rs  lib.rs
rust/crates/hsu-managed-process/: Cargo.toml
rust/crates/hsu-managed-process/src/: lib.rs  process_control.rs  process_control_impl.rs
rust/crates/hsu-managed-process/src/process_types/: integrated_managed.rs  standard_managed.rs  unmanaged.rs
rust/crates/hsu-module-api/: Cargo.toml
rust/crates/hsu-module-api/src/: bootstrap.rs  gateway_factory.rs  lib.rs  module_descriptor.rs  registry.rs  registry_client.rs  runtime.rs  service_connector.rs
rust/crates/hsu-module-management/: Cargo.toml
rust/crates/hsu-module-management/src/: config_types.rs  lib.rs  module_types.rs
rust/crates/hsu-module-proto/: Cargo.toml
rust/crates/hsu-module-proto/src/: direct.rs  grpc.rs  grpc_server.rs  lib.rs  options.rs  server.rs  server_manager.rs
rust/crates/hsu-monitoring/: Cargo.toml
rust/crates/hsu-monitoring/src/: grpc.rs  http.rs  lib.rs
rust/crates/hsu-process/: Cargo.toml
rust/crates/hsu-process-file/: Cargo.toml
rust/crates/hsu-process-file/src/: lib.rs
rust/crates/hsu-process-management/: Cargo.toml
rust/crates/hsu-process-management/src/: attachment.rs  lib.rs  lifecycle.rs  manager.rs  manager_tests.rs  process_control_impl.rs
rust/crates/hsu-process-management/src/config/: mod.rs  validation.rs
rust/crates/hsu-process-manager/: Cargo.toml  README.md  config-health-check-example.yaml  config-health-restart-example.yaml  config-process-types-example.yaml  config-resource-monitoring-example.yaml  config-restart-policy-example.yaml
rust/crates/hsu-process/src/: lib.rs  terminate.rs
rust/crates/hsu-resource-limits/: Cargo.toml
rust/crates/hsu-resource-limits/src/: lib.rs
rust/crates/hsu-service-registry/: Cargo.toml
rust/src/: errors.rs  lib.rs  main.rs  utils.rs
rust/src/api/: mod.rs
rust/src/config/: mod.rs
rust/src/health/: grpc.rs  http.rs
rust/src/logging/: mod.rs
rust/src/monitoring/: mod.rs
rust/src/process/: attachment.rs  lifecycle.rs  mod.rs  monitoring.rs  state.rs
(+115 files in other folders)
