[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsu-core"
version = "1.0.0"
description = "HSU Repository Portability Framework - Core Library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "HSU Core Team", email = "core-tools@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies for HSU framework
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
    "ruff>=0.0.280",
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

# Documentation dependencies  
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/core-tools/hsu-core"
"Bug Reports" = "https://github.com/core-tools/hsu-core/issues"
"Source" = "https://github.com/core-tools/hsu-core"

# Configure setuptools to install py/ directory as hsu_core package
[tool.setuptools]
packages = [
    "hsu_core",
    "hsu_core.generated",
    "hsu_core.generated.api",
    "hsu_core.generated.api.proto", 
    "hsu_core.control",
    "hsu_core.domain",
    "hsu_core.build",
]

[tool.setuptools.package-dir]
"hsu_core" = "lib"

# UV configuration (future-ready)
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
    "ruff>=0.0.280",
]

# Ruff configuration (fast linting)
[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']

# isort configuration
[tool.isort]
profile = "black"
line_length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["py/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
] 