[package]
name = "hsu-log-collection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Internal dependencies
hsu-common = { path = "../hsu-common" }

