[package]
name = "hsu-module-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol abstraction layer for HSU framework"

[dependencies]
hsu-common = { path = "../hsu-common" }
hsu-module-management = { path = "../hsu-module-management" }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

